issue_with_animate.css_wrapper_z-index

--- a/css/main.css
+++ b/css/main.css
@@ -222,18 +222,19 @@ a{
   animation-duration: 2s;
   animation-iteration-count: 1;
 }
+
 #profile-1{
-  animation-delay:1s;
+  animation-delay:0.5s;
   animation-duration: 2s;
   animation-iteration-count: 1;
 }
 #profile-2{
-  animation-delay:1.5s;
+  animation-delay:1s;
   animation-duration: 2s;
   animation-iteration-count: 1;
 }
 #profile-3{
-  animation-delay:2s;
+  animation-delay:1.5s;
   animation-duration: 2s;
   animation-iteration-count: 1;
 }
@@ -259,11 +260,6 @@ a{
 }
 #text-area-4 {
   animation-delay:4.5s;
-  animation-duration: 2s;
-  animation-iteration-count: 1;
-}
-#wrapper {
-  animation-delay:0.8s;
   animation-duration: 2s;
   animation-iteration-count: 1;
 }
